Changes last panache repos to DAOs and added missing dependencies. Starting to fix the broken tests.